Add theme switching

--- a/app/assets/css/main.css
+++ b/app/assets/css/main.css
@@ -1,4 +1,7 @@
 @import "tailwindcss";
+
 @plugin "daisyui" {
-    themes: dark --default light --perferslight;
+  themes:
+    light --default,
+    dark --prefersdark;
 }
